--- a/Web Site/style.css
+++ b/Web Site/style.css
@@ -21,14 +21,15 @@ a img {
 	border: none;
 }
 a:link {
-	color: #42413C;
+	color: #5199DE;
 	text-decoration: underline;
 }
 a:visited {
-	color: #6E6C64;
+	color: #000;
 	text-decoration: underline;
 }
 a:hover, a:active, a:focus {
+	color: #009;
 	text-decoration: none;
 }
 header {
