--- a/Web Site/style.css
+++ b/Web Site/style.css
@@ -5,7 +5,7 @@ body {
 	margin: 0 auto;
 	padding: 0;
 	color: #000;
-	width: 960px;
+	width: 1000px;
 }
 
 ul, ol, dl {
@@ -38,11 +38,11 @@ header {
 }
 #Logo {
 	float:left;
-	margin: 20px 120px;
+	margin: 20px 115px;
 }
 article {
 	padding: 10px 0;
-	width: 600px;
+	width: 640px;
 	float: left;
 	clear: left;
 }
@@ -62,7 +62,10 @@ ul.nav {
 
 ul.nav a, ul.nav a:visited {
 	display: block;
-	width: 180px;
+	width: 170px;
+	margin-left: 10px;
+	margin-top: 10px;
+	border-radius: 10px;
 	text-decoration: none;
 	line-height: 2.5;
 	text-align:center;
