--- a/Web Site/style.css
+++ b/Web Site/style.css
@@ -46,6 +46,15 @@ article {
 	float: left;
 	clear: left;
 }
+#Characters {
+	-webkit-column-count: 3;
+	-webkit-column-gap: 5px;
+	column-count: 3;
+	column-gap: 5px;
+}
+#Characters p {
+	display:inline-block;
+}
 aside {
 	float: left;
 	width: 360px;
