--- a/Web Site/style.css
+++ b/Web Site/style.css
@@ -33,7 +33,7 @@ a:hover, a:active, a:focus {
 	text-decoration: none;
 }
 header {
-	background-color: #5199DE;
+	background-color: rgba(83,153,222,0.9);
 	overflow: hidden;
 }
 #Logo {
@@ -81,7 +81,12 @@ ul.nav a, ul.nav a:visited {
 	text-decoration: none;
 	line-height: 2.5;
 	text-align:center;
-	background-color: #2ED81D;
+	background-color: #2DD420;
+	background: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#3A0), to(#2DD420));
+	background: -webkit-linear-gradient(top, #3A0, #2DD420);
+	background: -moz-linear-gradient(top, #3A0, #2DD420);
+	background: -ms-linear-gradient(top, #3A0, #2DD420);
+	background: -o-linear-gradient(top, #3A0, #2DD420);
 	float: left;
 }
 
