--- a/Web Site/style.css
+++ b/Web Site/style.css
@@ -43,7 +43,7 @@ header {
 h1 {
 	text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
 }
-article {
+.content {
 	padding: 10px 0;
 	width: 640px;
 	float: left;
