--- a/MySite_Cain_Preston/style.css
+++ b/MySite_Cain_Preston/style.css
@@ -72,7 +72,7 @@ ul.nav {
 	list-style: none;
 }
 
-ul.nav a, ul.nav a:visited {
+ul.nav a {
 	display: block;
 	width: 170px;
 	margin-left: 10px;
@@ -87,9 +87,10 @@ ul.nav a, ul.nav a:visited {
 	background: -moz-linear-gradient(top, #3A0, #2DD420);
 	background: -ms-linear-gradient(top, #3A0, #2DD420);
 	background: -o-linear-gradient(top, #3A0, #2DD420);
-	float: left;
 }
-
+ul.nav li {
+	float:left;
+}
 footer {
 	padding: 10px 0;
 	background-color: rgba(83,153,222,0.9);
