--- a/MySite_Cain_Preston/style.css
+++ b/MySite_Cain_Preston/style.css
@@ -56,6 +56,8 @@ h1 {
 	-webkit-column-gap: 5px;
 	column-count: 3;
 	column-gap: 5px;
+	margin-top: 40px;
+	margin-bottom: 40px;
 }
 #Characters p {
 	display:inline-block;
