--- a/MySite_Cain_Preston/css/smaller.css
+++ b/MySite_Cain_Preston/css/smaller.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @import url(http://fonts.googleapis.com/css?family=Montserrat);
 body {
-	font: 85%/1.3 'Montserrat', Verdana, Arial, Helvetica, sans-serif;
+	font: 75%/1.3 'Montserrat', Verdana, Arial, Helvetica, sans-serif;
 	background-image:url(../images/background.jpg);
 	background-repeat:repeat-x;
 	margin: 0 auto;
@@ -47,15 +47,15 @@ h1 {
 }
 .content {
 	padding: 10px 0;
-	width: 64%;
+	width: 100%;
 	float: left;
 	clear: left;
 	background-color:#FFF;
 }
 #Characters {
-	-webkit-column-count: 2;
+	-webkit-column-count: 1;
 	-webkit-column-gap: 5px;
-	column-count: 2;
+	column-count: 1;
 	column-gap: 5px;
 	margin-top: 40px;
 	margin-bottom: 40px;
@@ -65,7 +65,7 @@ h1 {
 }
 aside {
 	float: left;
-	width: 36%;
+	width: 100%;
 	background-color: #FFCF08;
 	padding: 10px 0;
 }
@@ -96,6 +96,7 @@ ul.nav a {
 }
 ul.nav li {
 	float:left;
+	padding-bottom: 10px;
 }
 footer {
 	padding: 10px 0;
