--- a/MySite_Cain_Preston/css/style.css
+++ b/MySite_Cain_Preston/css/style.css
@@ -124,3 +124,48 @@ address {
 header, section, footer, aside, article, figure {
 	display: block;
 }
+@media screen and (max-width: 960px) {
+	body {
+	font: 85%/1.3 'Montserrat', Verdana, Arial, Helvetica, sans-serif;
+	}
+	.content {
+	width: 64%;
+	}
+	#Characters {
+	-webkit-column-count: 2;
+	column-count: 2;
+	}
+	aside {
+	width: 36%;
+	}
+}
+@media screen and (max-width: 767px){
+	body {
+	font: 80%/1.3 'Montserrat', Verdana, Arial, Helvetica, sans-serif;
+	}
+	.content {
+	width: 64%;
+	}
+	#Characters {
+	-webkit-column-count: 1;
+	column-count: 1;
+	}
+	aside {
+	width: 36%;
+	}
+}
+@media screen and (max-width: 599px) {
+	body {
+	font: 75%/1.3 'Montserrat', Verdana, Arial, Helvetica, sans-serif;
+	}
+	.content {
+	width: 100%;
+	}
+	#Characters {
+	-webkit-column-count: 1;
+	column-count: 1;
+	}
+	aside {
+	width: 100%;
+	}
+}
