--- a/css/style.css
+++ b/css/style.css
@@ -16,8 +16,8 @@ ul, ol, dl {
 }
 h1, h2, h3, h4, h5, h6, p {
 	margin-top: 0;
-	padding-right: 15px;
-	padding-left: 15px;
+	padding-right: 4%;
+	padding-left:4%;
 }
 a img {
 	border: none;
@@ -41,7 +41,7 @@ header {
 }
 #Logo {
 	float:left;
-	margin: 20px 115px;
+	margin: 2% 11.5%;
 }
 h1 {
 	text-shadow: 3px 3px 0px rgba(0,0,0,0.2);
@@ -55,16 +55,20 @@ h1 {
 }
 #Characters {
 	-webkit-column-count: 3;
-	-webkit-column-gap: 5px;
+	-webkit-column-gap: 4%;
 	-moz-column-count: 3;
-	-moz-column-gap: 5px;
+	-moz-column-gap: 4%;
 	column-count: 3;
-	column-gap: 5px;
+	column-gap: 4%;
 	margin-top: 40px;
 	margin-bottom: 40px;
+	padding-left: 4%;
+	padding-right: 4%;
 }
-#Characters p {
+#Characters p, #Characters h2 {
 	display:inline-block;
+	padding-left: 0;
+	padding-right: 0;
 }
 aside {
 	float: left;
