--- a/css/style.css
+++ b/css/style.css
@@ -103,6 +103,15 @@ ul.nav a {
 ul.nav li {
 	float:left;
 }
+table {
+	padding: 20px 4%;
+	width: 50%;
+	text-align:center;
+}
+td img{
+	height: 11px;
+	width: 11px;
+}
 footer {
 	padding: 1% 0;
 	background-color: rgba(83,153,222,0.9);
@@ -134,6 +143,9 @@ header, section, footer, aside, article, figure {
 	aside li {
 		padding-left: 5%;
 	}
+	table {
+	width:auto;
+	}
 }
 @media screen and (max-width: 767px){
 	body {
@@ -154,6 +166,9 @@ header, section, footer, aside, article, figure {
 	aside li {
 		padding-left: 5%;
 	}
+	table {
+	width:auto;
+	}
 }
 @media screen and (max-width: 599px) {
 	body {
@@ -173,5 +188,8 @@ header, section, footer, aside, article, figure {
 	}
 	aside li {
 		padding-left: 5%;
+	}
+	table {
+	width:auto;
 	}
 }
