--- a/css/style.css
+++ b/css/style.css
@@ -105,8 +105,9 @@ ul.nav li {
 }
 table {
 	padding: 20px 4%;
-	width: 50%;
+	width: 45%;
 	text-align:center;
+	float:left;
 }
 td img{
 	height: 11px;
@@ -123,6 +124,129 @@ address {
 }
 header, section, footer, aside, article, figure {
 	display: block;
+}
+#feedback-page{
+	text-align:center;
+}
+
+#form-main{
+	width:45%;
+	float:left;
+	padding-top:0px;
+	margin-left: 4%;
+	margin-top: 20px;
+	margin-bottom: 20px;
+}
+
+#form-div {
+	background-color:rgba(72,72,72,0.4);
+	padding-left:15px;
+	padding-right:15px;
+	padding-top:15px;
+	padding-bottom:20px;
+	float: left;
+  -moz-border-radius: 7px;
+  -webkit-border-radius: 7px;
+}
+
+.feedback-input {
+	color:#3c3c3c;
+	font-family: Helvetica, Arial, sans-serif;
+  font-weight:500;
+	font-size: 18px;
+	border-radius: 0;
+	line-height: 22px;
+	background-color: #fbfbfb;
+	padding: 13px 13px 13px 54px;
+	margin-bottom: 10px;
+	width:100%;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
+  border: 3px solid rgba(0,0,0,0);
+}
+
+.feedback-input:focus{
+	background: #fff;
+	box-shadow: 0;
+	border: 3px solid #3498db;
+	color: #3498db;
+	outline: none;
+  padding: 13px 13px 13px 54px;
+}
+
+.focused{
+	color:#30aed6;
+	border:#30aed6 solid 3px;
+}
+
+#name{
+	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+	background-size: 30px 30px;
+	background-position: 11px 8px;
+	background-repeat: no-repeat;
+}
+
+#email{
+	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+	background-size: 30px 30px;
+	background-position: 11px 8px;
+	background-repeat: no-repeat;
+}
+
+textarea {
+    width: 100%;
+    height: 150px;
+    line-height: 150%;
+    resize:vertical;
+}
+
+input:hover, textarea:hover,
+input:focus, textarea:focus {
+	background-color:white;
+}
+
+#button-blue{
+	font-family: 'Montserrat', Arial, Helvetica, sans-serif;
+	float:left;
+	width: 100%;
+	border: #fbfbfb solid 4px;
+	background-color: #3498db;
+	color:white;
+	font-size:24px;
+	padding-top:17px;
+	padding-bottom:17px;
+	-webkit-transition: all 0.3s;
+	-moz-transition: all 0.3s;
+	transition: all 0.3s;
+  margin-top:-4px;
+  font-weight:700;
+}
+
+#button-blue:hover{
+	background-color: rgba(0,0,0,0);
+	color: #0493bd;
+}
+	
+.submit:hover {
+	color: #3498db;
+}
+	
+.ease {
+	width: 0px;
+	height: 64px;
+	background-color: #fbfbfb;
+	-webkit-transition: .3s ease;
+	-moz-transition: .3s ease;
+	-o-transition: .3s ease;
+	-ms-transition: .3s ease;
+	transition: .3s ease;
+}
+
+.submit:hover .ease{
+  width:100%;
+  background-color:white;
 }
 @media screen and (max-width: 960px) {
 	body {
@@ -143,9 +267,6 @@ header, section, footer, aside, article, figure {
 	aside li {
 		padding-left: 5%;
 	}
-	table {
-	width:auto;
-	}
 }
 @media screen and (max-width: 767px){
 	body {
@@ -165,9 +286,6 @@ header, section, footer, aside, article, figure {
 	}
 	aside li {
 		padding-left: 5%;
-	}
-	table {
-	width:auto;
 	}
 }
 @media screen and (max-width: 599px) {
@@ -191,5 +309,16 @@ header, section, footer, aside, article, figure {
 	}
 	table {
 	width:auto;
+	}
+	#form-main{
+	width:70%;
+	}
+	#form-div{
+		left: 3%;
+		margin-right: 3%;
+		width: 88%;
+		margin-left: 0;
+		padding-left: 3%;
+		padding-right: 3%;
 	}
 }
