--- a/css/style.css
+++ b/css/style.css
@@ -182,14 +182,14 @@ header, section, footer, aside, article, figure {
 }
 
 #name{
-	background-image: url(http://rexkirby.com/kirbyandson/images/name.svg);
+	background-image:url(../images/name.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
 	background-repeat: no-repeat;
 }
 
 #email{
-	background-image: url(http://rexkirby.com/kirbyandson/images/email.svg);
+	background-image:url(../images/email.svg);
 	background-size: 30px 30px;
 	background-position: 11px 8px;
 	background-repeat: no-repeat;
