--- a/style.css
+++ b/style.css
@@ -18,5 +18,62 @@ body {
 }
 nav {
 	clear: left;
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	background-color:#FFF;
+	border-radius: 4px;
+	padding: 6px;
+	max-width: 27em;
+}
+nav a {
+	text-decoration:none;
+	margin-left: 1em;
+	color:#000;
+}
+
+#huge {
+	font-family: "HelveticaNeue-Light", "Helvetica Neue Light", "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+	font-size:6em;
+	color:#FFF;
+	text-shadow: 0 3px 0 #999999, 0 15px 5px rgba(0,0,0,0.3), 10px 20px 5px rgba(0,0,0,0.15), -10px 20px 5px rgba(0,0,0,0.15);
+	margin:30px 0;
+}
+
+button {
+	background: #fff;
+	border: 1px solid #bbb;
+	border-radius: 4px;
+	-webkit-box-shadow: inset 0 0 1px 1px #f6f6f6;
+	box-shadow: inset 0 0 1px 1px #f6f6f6;
+	color: #333;
+	font: bold 12px/1 "helvetica neue", helvetica, arial, sans-serif;
+	padding: 8px 0 9px;
+	text-align: center;
+	text-shadow: 0 1px 0 #fff;
+	width: 150px;
+}
+button:hover {
+	background: #d9d9d9;
+	-webkit-box-shadow: inset 0 0 1px 1px #eaeaea;
+	box-shadow: inset 0 0 1px 1px #eaeaea;
+	color: #222;
+}
+button:active {
+	background: #c0c0c0;
+	-webkit-box-shadow: inset 0 0 1px 1px #e3e3e3;
+	box-shadow: inset 0 0 1px 1px #e3e3e3;
+	color: #000;
+}
+button a {
+	color:inherit;
+	text-decoration:none;
+}
+input {
+	display: inline-block;
+	border: 1px solid #ccc;
+	box-shadow: inset 0 1px 3px #ddd;
+	border-radius: 4px;
+	padding: .5em 1em;
+}
+.lane {
 	font-family:'Lane-Narrow';
 }
