--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,7 @@
 body {
 	width: 70%;
 	margin: 0 auto;
-	background:url(cityscapes-skyline-chicago-photography-grayscale-illinois.jpg) no-repeat center center fixed; 
+	background: url(../Images/cityscapes-skyline-chicago-photography-grayscale-illinois.jpg) no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
